// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`describe when the AddTicketDialog Component is given open as false AddTicketDialog should show the addTicketDialog open property as false 1`] = `
<Dialog
  autoDetectWindowHeight={true}
  autoScrollBodyContent={false}
  modal={false}
  onRequestClose={[Function]}
  open={false}
  repositionOnUpdate={true}
  title="Dialog With Actions"
>
  <h1>
    Add a Ticket 
  </h1>
</Dialog>
`;

exports[`describe when the AddTicketDialog Component is given open as true AddTicketDialog should show the addTicketDialog open property as true 1`] = `
<Dialog
  autoDetectWindowHeight={true}
  autoScrollBodyContent={false}
  modal={false}
  onRequestClose={[Function]}
  open={true}
  repositionOnUpdate={true}
  title="Dialog With Actions"
>
  <h1>
    Add a Ticket 
  </h1>
</Dialog>
`;
